--- a/gdb/doc/Makefile.in
+++ b/gdb/doc/Makefile.in
@@ -245,7 +245,7 @@ GDBvn.texi : ${gdbdir}/version.in
 # not one for their binary config---which may not be specifically
 # defined anyways).
 gdb-cfg.texi: ${srcdir}/${DOC_CONFIG}-cfg.texi
-	(test "$$LN_S" = "ln -s" && \
+	(test "$(LN_S)" = "ln -s" && \
 	  ln -s ${srcdir}/${DOC_CONFIG}-cfg.texi gdb-cfg.texi) || \
 	ln ${srcdir}/${DOC_CONFIG}-cfg.texi gdb-cfg.texi || \
 	cp ${srcdir}/${DOC_CONFIG}-cfg.texi gdb-cfg.texi
@@ -268,7 +268,7 @@ GDB_TEX_TMPS = gdb.aux gdb.cp* gdb.fn* gdb.ky* gdb.log gdb.pg* gdb.toc \
 # GDB MANUAL: TeX dvi file
 gdb.dvi: ${GDB_DOC_FILES}
 	if [ ! -f ./GDBvn.texi ]; then \
-		(test "$$LN_S" = "ln -s" && ln -s $(srcdir)/GDBvn.texi .) || \
+		(test "$(LN_S)" = "ln -s" && ln -s $(srcdir)/GDBvn.texi .) || \
 		ln $(srcdir)/GDBvn.texi . || \
 		cp $(srcdir)/GDBvn.texi . ; else true; fi
 	rm -f $(GDB_TEX_TMPS)
@@ -279,7 +279,7 @@ gdb.ps: gdb.dvi
 
 gdb.pdf: ${GDB_DOC_FILES}
 	if [ ! -f ./GDBvn.texi ]; then \
-		(test "$$LN_S" = "ln -s" && ln -s $(srcdir)/GDBvn.texi .) || \
+		(test "$(LN_S)" = "ln -s" && ln -s $(srcdir)/GDBvn.texi .) || \
 		ln $(srcdir)/GDBvn.texi . || \
 		cp $(srcdir)/GDBvn.texi . ; else true; fi
 	rm -f $(GDB_TEX_TMPS)
@@ -306,7 +306,7 @@ gdb.info: ${GDB_DOC_FILES}
 # in main sourcedir.
 links2roff: $(GDB_DOC_SOURCE_INCLUDES)
 	if [ ! -f gdb.texinfo ]; then \
-		(test "$$LN_S" = "ln -s" && ln -s $(GDB_DOC_SOURCE_INCLUDES) .) || \
+		(test "$(LN_S)" = "ln -s" && ln -s $(GDB_DOC_SOURCE_INCLUDES) .) || \
 		ln $(GDB_DOC_SOURCE_INCLUDES)    . || \
 		cp $(GDB_DOC_SOURCE_INCLUDES)    . ; \
 	fi
