--- a/gdb/config.in
+++ b/gdb/config.in
@@ -257,6 +257,9 @@
 /* Define if you have the strchr function.  */
 #undef HAVE_STRCHR
 
+/* Define if you have the syscall function.  */
+#undef HAVE_SYSCALL
+
 /* Define if you have the <argz.h> header file.  */
 #undef HAVE_ARGZ_H
 
@@ -512,6 +515,9 @@
 
 /* Define if <thread_db.h> has the TD_NOTALLOC error code. */
 #undef THREAD_DB_HAS_TD_NOTALLOC
+
+/* Define if we can use the tkill syscall. */
+#undef HAVE_TKILL_SYSCALL
 
 /* Define to the default OS ABI for this configuration. */
 #undef GDB_OSABI_DEFAULT
