--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -2265,7 +2265,8 @@ stabsread.o: stabsread.c $(defs_h) $(gdb_string_h) $(bfd_h) $(gdb_obstack_h) \
 stack.o: stack.c $(defs_h) $(gdb_string_h) $(value_h) $(symtab_h) \
 	$(gdbtypes_h) $(expression_h) $(language_h) $(frame_h) $(gdbcmd_h) \
 	$(gdbcore_h) $(target_h) $(source_h) $(breakpoint_h) $(demangle_h) \
-	$(inferior_h) $(annotate_h) $(ui_out_h) $(block_h) $(stack_h)
+	$(inferior_h) $(annotate_h) $(ui_out_h) $(block_h) $(stack_h) \
+	$(gdb_assert_h)
 standalone.o: standalone.c $(gdb_stat_h) $(defs_h) $(symtab_h) $(frame_h) \
 	$(inferior_h) $(gdb_wait_h)
 std-regs.o: std-regs.c $(defs_h) $(builtin_regs_h) $(frame_h) $(gdbtypes_h) \
